# oda-services

./: .dockerignore  .env.example  .gitignore  .golangci.yml
gateway/: .air.toml  Dockerfile  README.md  go.mod  go.sum
gateway/cmd/server/: main.go
gateway/internal/config/: config.go
gateway/internal/middleware/: auth.go  auth_test.go  security.go
gateway/internal/proxy/: circuitbreaker.go  circuitbreaker_test.go  proxy.go
moderation-api/: Dockerfile  README.md  pyproject.toml
moderation-api/src/moderation/: config.py  main.py
moderation-api/src/moderation/analysis/: domain.py  langchain_provider.py  prompt.py  provider.py
moderation-api/src/moderation/health/: router.py
moderation-api/src/moderation/processing/: consumer.py  repository.py  usecase.py
moderation-api/src/moderation/shared/: database.py  models.py
moderation-api/tests/: test_domain.py  test_health.py
read-api/: .air.toml  Dockerfile  README.md  go.mod  go.sum
read-api/cmd/server/: main.go
read-api/internal/config/: config.go
read-api/internal/database/: postgres.go
read-api/internal/middleware/: huma.go  middleware.go  middleware_test.go  security.go
shared/: .gitignore  go.mod  go.sum
shared/domain/: admin.go  poem.go  user.go
shared/hasher/: hasher.go  hasher_test.go
shared/jwt/: jwt.go  jwt_test.go
shared/validator/: validator.go
write-api/: .air.toml  .gitignore  Dockerfile  README.md  go.mod  go.sum
write-api/cmd/server/: main.go
write-api/internal/config/: config.go
write-api/internal/database/: postgres.go
write-api/internal/middleware/: huma.go  (+3 more)
(+76 files in other folders)
